deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wms
  labels:
    app.kubernetes.io/part-of: wms
    pod-security.kubernetes.io/enforce: restricted
